- BugFix: Identification is a band was HF or VHF was not always properly done.
- BugFix: Higher bands where not shown to be selected in the preferences.
- BugFix: DB updating function (009) blocked the execution of KLog the first time it was executed.
- BugFix: Language message if English is the System language is no shown anymore.

May 2017 - 0.9.2.6
- Check updates feature added. On start or when user desires KLog checks if there is one updated version available.
- Simplified the way new logs are added, importing the general StationCallsign & Operators as default for new logs.
- Improved the way first start was managed when no entity information was loaded.
- GUI: Application icon is now shown in the application windows.
- GUI: Updated some messages & tips.
- GUI: DXCluster offers the Station Callsign as default value to connect.
- GUI: Some menu minor reorganization.
- Console: Added a few commands to the console command.
- Changed the World class to be able to import files from any folder.
- Changed how some non ARRL valid entities are managed to show the common name (Sicily / Italy)
- BugFix: When manually importing a new CTY.CSV, although data was updated, it was not shown until next KLog start.
- BugFix: In the others tab, the DXCC was sometime not correctly identified.
- BugFix: Update on the DXCC widget caused no data to be shown if some columns were selected.
- BugFix: Identification is a band was HF or VHF was not always properly done.
- BugFix: Some improvements in data quality when exporting an ADIF file.
- BugFix: When importing an ADIF file, if the file was not correct it was not possible to cancel the whole importing process.
- Some minor changes on source code to optimize and improve.
- Translations updated: Croatian (TNX M0NKC), Japanese (TNX JL3OXR) & Spanish (EA4TV).

November 2016 - 0.9.2.5
- BugFix: ADIF export function was not exporting the correct BAND & MODE data.

September 2016 - 0.9.2.4