@@ -2485,9 +2485,8 @@ Y tiene la última versión.</translation>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../mainwindow.cpp" line="3644"/>
         <source>&amp;Update CTY.CSV</source>
-        <translation>Act&amp;ualizar CTY.CSV</translation>
+        <translation type="vanished">Act&amp;ualizar CTY.CSV</translation>
     </message>
     <message>
         <location filename="../mainwindow.cpp" line="3672"/>
@@ -2644,6 +2643,11 @@ que KLog propone: </translation>
     <message>
         <location filename="../mainwindow.cpp" line="3637"/>
         <source>&amp;Find requested pending to receive</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../mainwindow.cpp" line="3644"/>
+        <source>&amp;Update cty.csv</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -5377,14 +5381,12 @@ The log will not be opened.</oldsource>
 <context>
     <name>SetupPageWorldEditor</name>
     <message>
-        <location filename="../setuppageworldeditor.cpp" line="88"/>
         <source>An entities information file (CTY.CSV) has been detected in your KLog folder and will be loaded.</source>
-        <translation>Un fichero de información de entidades (CTY.CSV) ha sido detectado en su carpeta de KLog y será usado.</translation>
+        <translation type="vanished">Un fichero de información de entidades (CTY.CSV) ha sido detectado en su carpeta de KLog y será usado.</translation>
     </message>
     <message>
-        <location filename="../setuppageworldeditor.cpp" line="97"/>
         <source>No entities information file (CTY.CSV) has been detected in your KLog folder.</source>
-        <translation>No se ha detectado en su carpeta de KLog ningún fichero de información de entidades (CTY.CSV).</translation>
+        <translation type="vanished">No se ha detectado en su carpeta de KLog ningún fichero de información de entidades (CTY.CSV).</translation>
     </message>
     <message>
         <location filename="../setuppageworldeditor.cpp" line="98"/>
@@ -5404,6 +5406,16 @@ The log will not be opened.</oldsource>
     <message>
         <source>ARRL id</source>
         <translation type="vanished">Id ARRL</translation>
+    </message>
+    <message>
+        <location filename="../setuppageworldeditor.cpp" line="88"/>
+        <source>An entities information file (cty.csv) has been detected in your KLog folder and will be loaded.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../setuppageworldeditor.cpp" line="97"/>
+        <source>No entities information file (cty.csv) has been detected in your KLog folder.</source>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../setuppageworldeditor.cpp" line="188"/>
